--- a/presentation.tex
+++ b/presentation.tex
@@ -189,14 +189,36 @@ move(T&& t) {
 \end{frame}
 
 \begin{frame}{perfect forwarding}
+  \begin{block}{definition}
+    If 'foo' calls 'bar' forwarding arguments to it and the same bar
+    overload is selected as if bar was called directly then this is
+    called perfect forwarding.
+  \end{block}
   \begin{block}{function templates}
     If the type of a template function parameter is an rvalue
     \begin{itemize}
-    \item lvalue is deduced as lvalue
-    \item rvalue otherwise
+    \item reference collapsing
+    \item lvalue reference is deduced as lvalue reference
+    \item otherwise arameter will bind to rvalues
     \item see perfect\_forwarding.cpp
     \end{itemize}
   \end{block}
+\end{frame}
+
+\begin{frame}{std::forward}
+\begin{verbatim}
+template <class T>
+struct identity {
+    typedef T type;
+};
+
+template <class T>
+inline
+T&&
+forward(typename identity<T>::type&& t) {
+    return t;
+}
+\end{verbatim}
 \end{frame}
 
 \begin{frame}{std::vector::emplace\_back}
