--- a/presentation.tex
+++ b/presentation.tex
@@ -280,31 +280,9 @@ int main() {
   \end{block}
 \end{frame}
 
-\subsection{}
+\subsection{problems}
 \begin{frame}{invariants}
   sea invariant\_problem.cpp
-  #define _GLIBCXX_DEBUG
-#include <iostream>
-#include <vector>
-struct X
-{
-    // invariant: v.size() == 5
-    X() : v(5) {}
- 
-    ~X()
-    {
-        std::cout << v[0] << std::endl;
-    }
- 
- private:    
-    std::vector<int> v;
-};
- 
-int main()
-{
-    std::vector<X> y;
-    y.push_back(X()); // X() rvalue: copied in C++03, moved in C++0x
-}
 \end{frame}
 
 \section{constexpr}
