add constexpr outline

--- a/presentation.tex
+++ b/presentation.tex
@@ -286,6 +286,26 @@ int main() {
 \end{frame}
 
 \section{constexpr}
+\subsection{definition}
+\subsection{limitations}
+\begin{frame}{endian check}
+\end{frame}
+
+\subsection{examples}
+\begin{frame}{max}
+\end{frame}
+
+\begin{frame}{sizeof}
+\end{frame}
+
+\subsection{constexpr vs const}
+\begin{frame}{optimization}
+\end{frame}
+
+\subsection{metaprogramming}
+\begin{frame}{factorial}
+\end{frame}
+
 \section{POD modifications}
 \section{multithreading}
 \section{alignment}
