--- a/presentation.tex
+++ b/presentation.tex
@@ -106,7 +106,7 @@
   \end{block}
 \end{frame}
 
-\begin{frame}{forwarding arguments in C++03}
+\begin{frame}[fragile]{forwarding arguments in C++03}
 \begin{verbatim}
 template <class Operation>
 class binder2nd
@@ -115,8 +115,8 @@ class binder2nd
     ...
 public:
     ...
-    result_type operator()(const first_argument_type\& x);
-    result_type operator()(      first_argument_type\& x);
+    result_type operator()(const first_argument_type& x);
+    result_type operator()(      first_argument_type& x);
 };
 
 \end{verbatim}
@@ -126,7 +126,7 @@ public:
 \end{block}
 \end{frame}
 
-\begin{frame}{forwarding arguments in C++0x}
+\begin{frame}[fragile]{forwarding arguments in C++0x}
   \begin{block}{}
 \begin{verbatim}
 template <class Operation>
@@ -136,20 +136,20 @@ class binder2nd
     ...
 public:
     ...
-    result_type operator()(first_argument_type\&\& x);
+    result_type operator()(first_argument_type&& x);
 };
 
 \end{verbatim}
   \end{block}
 \end{frame}
 
-\begin{frame}{move semantics}
+\begin{frame}[fragile]{move semantics}
 \begin{block}{}
 \begin{verbatim}
 template <class T>
 inline
-typename remove_reference<T>::type\&\&
-move(T\&\& t) {
+typename remove_reference<T>::type&&
+move(T&& t) {
   return t;
 }
 
@@ -232,7 +232,7 @@ move(T\&\& t) {
   \end{block}
 \end{frame}
 
-\begin{frame}{std::forward}
+\begin{frame}[fragile]{std::forward}
   \begin{block}{}
 \begin{verbatim}
 template <class T>
@@ -242,8 +242,8 @@ struct identity {
 
 template <class T>
 inline
-T\&\&
-forward(typename identity<T>::type\&\& t) {
+T&&
+forward(typename identity<T>::type&& t) {
     return t;
 }
 
@@ -251,7 +251,7 @@ forward(typename identity<T>::type\&\& t) {
   \end{block}
 \end{frame}
 
-\begin{frame}{variadic templates and std::vector::emplace\_back}
+\begin{frame}[fragile]{variadic templates and std::vector::emplace\_back}
   \begin{block}{example}
 \begin{verbatim}
 #include <string>
@@ -259,7 +259,7 @@ forward(typename identity<T>::type\&\& t) {
 
 struct A {
 public:
-    explicit A(int, const std::string\&) {
+    explicit A(int, const std::string&) {
     }
 };
 
@@ -272,8 +272,9 @@ int main() {
   \end{block}
 \end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
   \begin{block}{implementation}
+\scriptsize{
 \begin{verbatim}
 #include <iostream>
 #include <string>
@@ -281,21 +282,21 @@ int main() {
 
 struct A {
 public:
-    explicit A(int x, const std::string\& str) {
+    explicit A(int x, const std::string& str) {
         std::cout << "A(" << x << ", " << str << ")\n";
     }
 };
 
 template <typename... Args>
-A create_a(Args\&\&... args) {
+A create_a(Args&&... args) {
     return A(std::forward<Args>(args)...);
 }
 
 int main() {
     A a = create_a(1, "hello");
 }
-
 \end{verbatim}
+}
   \end{block}
 \end{frame}
 
@@ -333,8 +334,9 @@ int main() {
   \end{block}
 \end{frame}
 
-\begin{frame}{examples}
+\begin{frame}[fragile]{examples}
   \begin{block}{}
+\tiny{
 \begin{verbatim}
 constexpr int square(int x); // OK: declaration
 constexpr int bufsz = 1024;  // OK: definition
@@ -359,6 +361,7 @@ int next(constexpr int x) {   // error: not for parameters
 extern constexpr int memsz;   // error: not a definition
 
 \end{verbatim}
+}
   \end{block}
 \end{frame}
 
@@ -372,7 +375,9 @@ extern constexpr int memsz;   // error: not a definition
     \item only conversions allowed in constant expressions
     \end{itemize}
   \end{block}
+\end{frame}
 
+\begin{frame}{constexpr constraints}
   \begin{block}{constructor}
     \begin{itemize}
     \item parameters of literal type / reference to literal type
@@ -385,16 +390,18 @@ extern constexpr int memsz;   // error: not a definition
 \end{frame}
 
 \subsection{limitations}
-\begin{frame}{endian check}
+\begin{frame}[fragile]{endian check}
   \begin{block}{little\_endian}
+\scriptsize{
 \begin{verbatim}
   constexpr bool little_endian()
   {
     const static unsigned num = 0xAABBCCDD;
-    return reinterpret_cast<const unsigned char*> (\&num)[0] == 0xDD;
+    return reinterpret_cast<const unsigned char*> (&num)[0] == 0xDD;
   }
 
 \end{verbatim}
+}
 An expression is a potential constant expression if it is a constant
 expression when all occurances of function parameters are replaced by
 arbitrary constant expressions of the appropriate type.
@@ -403,7 +410,7 @@ However \&num would be an adress
   \end{block}
 \end{frame}
 
-\begin{frame}{endian check}
+\begin{frame}[fragile]{endian check}
   \begin{block}{little\_endian}
 \begin{verbatim}
 const union {
@@ -423,18 +430,22 @@ member invokes undefined behaviour
 \end{frame}
 
 \subsection{examples}
-\begin{frame}{max}
+\begin{frame}[fragile]{max}
 \begin{verbatim}
-  template< typename Type > constexpr Type max( Type a, Type b ) { return a < b ? b : a; }
+template< typename Type >
+constexpr Type
+max( Type a, Type b ) {
+    return a < b ? b : a;
+}
 
 \end{verbatim}
 \end{frame}
 
-\begin{frame}{better sizeof}
+\begin{frame}[fragile]{better sizeof}
   \begin{block}{}
 \begin{verbatim}
 template <typename T, size_t N>
-constexpr size_t size_of(T (\&)[N]) {
+constexpr size_t size_of(T (&)[N]) {
     return N;
 }
 
@@ -453,7 +464,7 @@ constexpr size_t size_of(T (\&)[N]) {
 \end{frame}
 
 \subsection{easier metaprogramming}
-\begin{frame}{factorial}
+\begin{frame}[fragile]{factorial}
   \begin{block}{}
 \begin{verbatim}
 template<unsigned T>
@@ -506,7 +517,7 @@ int fact(unsigned n) {
   \end{block}
 \end{frame}
 
-\begin{frame}{running thread}
+\begin{frame}[fragile]{running thread}
 \begin{block}{}
 \begin{verbatim}
 struct MyThread {
@@ -521,13 +532,14 @@ std::thread t(std::ref(job));
 // ----
 
 void job(std::string s, double y, std::vector<int> vec);
-std::thread t(job, "hello", 42, std::vector<int>(1, 5)); // arguments are COPIED
+// arguments are COPIED
+std::thread t(job, "hello", 42, std::vector<int>(1, 5));
 
 \end{verbatim}
 \end{block}
 \end{frame}
 
-\begin{frame}{joining thread}
+\begin{frame}[fragile]{joining thread}
 \begin{block}{}
 \begin{verbatim}
 t.join();
@@ -555,6 +567,9 @@ t.detach();
     \end{itemize}
   \end{block}
 
+\end{frame}
+
+\begin{frame}{mutexes and guards}
   \begin{block}{unique\_lock}
     \begin{itemize}
     \item deferred locking
@@ -576,7 +591,7 @@ t.detach();
   \end{block}
 \end{frame}
 
-\begin{frame}{condition variables}
+\begin{frame}[fragile]{condition variables}
 \begin{block}{}
 \begin{verbatim}
    void foo() {
@@ -588,7 +603,7 @@ t.detach();
 \end{block}
 \end{frame}
 
-\begin{frame}{thread local data}
+\begin{frame}[fragile]{thread local data}
   \begin{block}{}
 \begin{verbatim}
   thread_local std::vector<int> v;
@@ -636,7 +651,7 @@ t.detach();
   \end{block}
 \end{frame}
 
-\begin{frame}{the problem (?)}
+\begin{frame}[fragile]{the problem (?)}
   \begin{block}{}
 \begin{verbatim}
   struct {
@@ -647,6 +662,10 @@ t.detach();
 
 \end{verbatim}
   \end{block}
+\end{frame}
+
+\begin{frame}
+  That's all
 \end{frame}
 
 \end{document}
